<resources>
    <string name="app_name">TXNotes</string>

    <!-- Activities' titles -->
    <string name="activity_main_title">TXNotes (%1$d)</string>
    <string name="activity_create_note_title">Новая заметка</string>
    <string name="activity_show_note_title">Просмотр</string>
    <string name="activity_edit_note_title">Редактирование</string>

    <!-- Hint text -->
    <string name="hint_set_note_text">Текст заметки</string>
    <string name="hint_set_note_title_text">Заголовок заметки</string>

    <!-- Snacks -->
    <string name="snack_delete_notes">Заметки удалены (%1$s)</string>

    <!-- Dialogs -->
    <string name="dialog_delete_note_message"><![CDATA[<b>Удалить заметки?</b> [%1$d]]]></string>
    <string name="dialog_delete_note_positive">Да</string>
    <string name="dialog_delete_note_negative">Нет</string>

    <string name="dialog_note_info_created">Создана:</string>
    <string name="dialog_note_info_modified">Изменена:</string>
    <string name="dialog_note_info_modifications_count">Всего изменений:</string>

    <!-- Main menu -->
    <string name="menu_exit">Выход</string>
    <string name="menu_sort_submenu">Сортировать</string>
    <string name="menu_sort_by_mdate_old_first">Сначала старые</string>
    <string name="menu_sort_by_mdate_new_first">Сначала новые</string>
    <string name="menu_sort_by_title">По заголовку</string>

    <string name="menu_search">Поиск</string>

    <string name="menu_info">Информация</string>
    <string name="menu_copy_text">Копировать текст</string>

    <string name="shared_pref_key_sorting">SORTING_MODE</string>
    <string name="shared_pref_last_installed_version">LAST_INSTALLED_VERSION</string>


    <string name="toast_cant_save_empty_note">Нельзя сохранить пустую заметку\nВведите заголовок и (или) текст заметки</string>
    <string name="toast_text_copied">Текст скопирован</string>
    <string name="toast_saving_error">ОШИБКА: Не удалось сохранить заметку!</string>

    <string name="dialog_exit_confirmation_positive">Выход</string>
    <string name="dialog_exit_confirmation_negative">Отмена</string>
    <string name="dialog_exit_confirmation_text">Выйти без сохранения?</string>

    <string name="dialog_change_log_title">Изменения в v%1$s</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>

    <string name="search_hint">Поиск</string>
    <string name="search_nothing_found">Ничего не найдено :(</string>

    <string name="changes_v_code_200">
        • Добавлен поиск по списку заметок \n
        • Добавлено отдельное поле для заголовка заметки \n
        • Текст заметки теперь выделяется и копируется в режиме просмотра \n
        • Добавлена опция в меню для копирования всего текста заметки \n
        • Ссылки в тексте заметки теперь кликабельны \n
        • Множество улучшений в UI приложения
    </string>

    <string name="changes_v_code_300">
        • Добавлена функция сохранения заметок в формате TXT \n
    </string>

    <string name="menu_export_to_txt">Экспорт в TXT</string>

    <string name="export_notes_description_text">Экспортировать заметки в Downloads/TXNotes?</string>

    <string name="sp_permission_write_external_storage_first_request">PERMISSION_WRITE_EXTERNAL_STORAGE_FIRST_REQUEST</string>


    <string name="info_permission_WES">
        Недостаточно прав. Для данной функции приложению требуется право на запись в хранилище.
        Предоставьте право и попробуйте снова.
    </string>

    <string name="info_permission_WES_with_settings">
        Недостаточно прав. Для данной функции приложению требуется право на запись в хранилище.
        Предоставьте право в настройках и попробуйте снова.
    </string>

    <string name="not_enough_rights">Недостаточно прав</string>

    <string name="to_settings">В настройки</string>
</resources>
