<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_sort_submenu"
        android:orderInCategory="100"
        android:title="@string/menu_sort_submenu">
        <menu>

            <item
                android:id="@+id/item_sort_by_mdtate_new_first"
                android:title="@string/menu_sort_by_mdate_new_first" />

            <item
                android:id="@+id/item_sort_by_mdtate_old_first"
                android:title="@string/menu_sort_by_mdate_old_first" />

            <item
                android:id="@+id/item_sort_by_title"
                android:title="@string/menu_sort_by_title" />

        </menu>
    </item>

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_export_to_txt"
        android:title="@string/menu_export_to_txt"
        android:orderInCategory="200"/>

    <item
        android:id="@+id/item_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="300"/>
</menu>