<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_save_note"
        android:icon="@drawable/ic_save"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/item_edit_note"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_show_info"
        android:orderInCategory="300"
        android:title="@string/menu_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_copy_text"
        android:orderInCategory="200"
        android:title="@string/menu_copy_text"
        app:showAsAction="never" />


</menu>