<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_change_log_title"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/changesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changes_v_code_200"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/closeDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_primary_button"
        android:clickable="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/dialog_ok"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>